--- a/index.html
+++ b/index.html
@@ -2,16 +2,44 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>ToDoアプリ</title>
-  <link rel="stylesheet" href="style.css">
+  <title>ログイン付き ToDoアプリ</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <h1>ToDoアプリ</h1>
-  <div class="todo-container">
-    <input id="taskInput" type="text" placeholder="タスクを入力">
-    <button onclick="addTask()">追加</button>
-    <ul id="taskList"></ul>
+<body class="bg-gray-100">
+
+<!-- ログイン画面 -->
+<div id="loginContainer" class="min-h-screen flex items-center justify-center">
+  <div class="bg-white p-8 rounded shadow-md w-96">
+    <h2 class="text-2xl font-bold mb-6 text-center">ログイン</h2>
+    <input id="username" class="border p-2 w-full mb-4 rounded" placeholder="ユーザー名">
+    <input id="password" type="password" class="border p-2 w-full mb-4 rounded" placeholder="パスワード">
+    <button onclick="login()" class="bg-blue-500 text-white py-2 px-4 rounded w-full hover:bg-blue-600">ログイン</button>
+    <p id="loginError" class="text-red-500 mt-2 text-sm"></p>
   </div>
-  <script src="script.js"></script>
+</div>
+
+<!-- ToDoアプリ画面 -->
+<div id="todoContainer" class="hidden min-h-screen p-6">
+  <h1 class="text-3xl font-bold mb-4 text-center">ToDoアプリ</h1>
+
+  <div class="flex mb-4 justify-center gap-2 flex-wrap">
+    <input id="taskInput" class="border p-2 rounded flex-1 min-w-[150px]" placeholder="タスクを入力">
+    <input id="taskDate" type="date" class="border p-2 rounded">
+    <select id="taskCategory" class="border p-2 rounded">
+      <option value="仕事">仕事</option>
+      <option value="プライベート">プライベート</option>
+      <option value="その他">その他</option>
+    </select>
+    <button onclick="addTask()" class="bg-green-500 text-white px-4 rounded hover:bg-green-600">追加</button>
+  </div>
+
+  <input id="searchInput" class="border p-2 w-full mb-4 rounded" placeholder="検索" oninput="filterTasks()">
+
+  <ul id="taskList" class="space-y-2"></ul>
+
+  <button onclick="logout()" class="mt-4 bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">ログアウト</button>
+</div>
+
+<script src="script.js"></script>
 </body>
 </html>
